<resources>
    <string name="app_name">DogHero</string>
    
    <string name="menu_search">Search</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_heroes">Heroes</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_options">Menu</string>
    
    <string name="msg_my_heroes_empty">You have not made a lodging yet nor favored a host</string>
	<string name="title_heroes_recents">Recents</string>
    <string name="title_heroes_favorites">Favorites</string>

    <string name="msg_reservation">Reservation</string>
    <string name="msg_contact">Contact</string>
    <string name="msg_per_night">Por noite</string>
    <string name="msg_super_hero">This user is super hero</string>
    <string name="msg_loading_heroes">Loading my heroes...</string>
    <string name="msg_error_network">This operation could not be completed at this time. Check your internet connection and try again!</string>
    <string name="msg_error">This operation could not be completed at this time.</string>

</resources>
